--- a/2015-04-06-antiframework/my-todos/src/css/app.css
+++ b/2015-04-06-antiframework/my-todos/src/css/app.css
@@ -1,3 +1,3 @@
-@import url('../vendor/npm/todomvc-app-css@2.0.0/index.css');
+@import '../vendor/npm/todomvc-app-css@2.0.0/index.css';
 
-@import url('../html/my-todos/element.css');
+@import '../html/my-todos/element.css';
